# wagtail-shop

./: README.md  pyproject.toml
app/settings/: base.py  dev.py
