[tool.poetry]
name = "wagtail-shop"
version = "0.1.0"
description = ""
authors = ["Nick Moreton <nickmoreton@me.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "wagtail_shop"}]

[tool.poetry.dependencies]
python = "^3.8"
wagtail = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
